--- a/src/index.html
+++ b/src/index.html
@@ -40,5 +40,13 @@
   </head>
   <body>
     <app-root>Loading...</app-root>
+    <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name">
+      <input type="email" name="email">
+      <input type="text" name="phone">
+      <input type="text" name="subject">
+      <textarea name="message"></textarea>
+      <input type="text" name="bot-field">
+    </form>
   </body>
 </html>
