--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
     />
     <meta
       property="og:image"
-      content="https://stackblitzstartersqjizivdu-2cnk--4200--96435430.local-credentialless.webcontainer.io/assets/ricepic.jpg"
+      content="/assets/ricepic.jpg"
     />
     <meta
       property="og:url"
-      content="https://stackblitzstartersqjizivdu-2cnk--4200--96435430.local-credentialless.webcontainer.io"
+      content="https://mysorefarms.ca"
     />
     <meta property="og:type" content="website" />
 
@@ -40,13 +40,16 @@
   </head>
   <body>
     <app-root>Loading...</app-root>
+
+    <!-- Hidden registration form (Netlify scans this at build time) -->
     <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name">
-      <input type="email" name="email">
-      <input type="text" name="phone">
-      <input type="text" name="subject">
+      <input type="hidden" name="form-name" value="contact" />
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="phone" />
+      <input type="text" name="subject" />
       <textarea name="message"></textarea>
-      <input type="text" name="bot-field">
+      <input type="text" name="bot-field" />
     </form>
   </body>
 </html>
