--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
     />
     <meta
       property="og:image"
-      content="/assets/ricepic.jpg"
+      content="https://stackblitzstartersqjizivdu-2cnk--4200--96435430.local-credentialless.webcontainer.io/assets/ricepic.jpg"
     />
     <meta
       property="og:url"
-      content="https://mysorefarms.ca"
+      content="https://stackblitzstartersqjizivdu-2cnk--4200--96435430.local-credentialless.webcontainer.io"
     />
     <meta property="og:type" content="website" />
 
@@ -40,16 +40,5 @@
   </head>
   <body>
     <app-root>Loading...</app-root>
-
-    <!-- Hidden registration form (Netlify scans this at build time) -->
-    <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
-      <input type="hidden" name="form-name" value="contact" />
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <input type="text" name="phone" />
-      <input type="text" name="subject" />
-      <textarea name="message"></textarea>
-      <input type="text" name="bot-field" />
-    </form>
   </body>
 </html>
